--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,5 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.dagster]
-module_name = "dagster.datafest_detathon.definitions"
-code_location_name = "dagster.datafest_detathon"
+module_name = "datafest_detathon.definitions"
+code_location_name = "datafest_detathon"
