--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -1,4 +1,4 @@
 locations:
-- code_source:
-    package_name: datafest_datathon
-  location_name: datafest_datathon
+  - location_name: datafest_datathon
+    code_source:
+      module_name: datafest_datathon.definitions
