tracked target/manifest.json

--- a/datafest_datathon/dbt_data_baddies_datafest/.gitignore
+++ b/datafest_datathon/dbt_data_baddies_datafest/.gitignore
@@ -1,4 +1,7 @@
+# Ignore everything in the target directory
+target/*
 
-target/
+# Except for manifest.json
+!target/manifest.json
 dbt_packages/
 logs/
