--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,16 @@
 name: Serverless Prod Deployment
+
 on:
   push:
     branches:
       - "main"
       - "master"
-    
+
 concurrency:
-  # Cancel in-progress deploys to same branch
+  # Cancel in-progress deploys to the same branch
   group: ${{ github.ref }}/deploy
   cancel-in-progress: true
+
 env:
   DAGSTER_CLOUD_URL: "http://datafestafrica.dagster.cloud"
   DAGSTER_CLOUD_API_TOKEN: ${{ secrets.DAGSTER_CLOUD_API_TOKEN }}
@@ -42,7 +44,16 @@ jobs:
           ref: ${{ github.head_ref }}
           path: project-repo
 
-      # Add the lines to install dbt-core and run dbt deps
+      # Cache pip dependencies to speed up the workflow
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      # Install dbt-core and its dependencies
       - name: Install dbt-core and dependencies
         run: |
           pip install dbt-core
@@ -72,6 +83,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
+          
       - name: Build and deploy to Dagster Cloud serverless
         uses: dagster-io/dagster-cloud-action/actions/serverless_prod_deploy@v0.1
         with:
