--- a/datafest_datathon/machine_learning/requirements.txt
+++ b/datafest_datathon/machine_learning/requirements.txt
@@ -1,7 +1,7 @@
 # List of dependencies
-pandas
-numpy
-scikit-learn
-matplotlib
-sqlalchemy
-imbalanced-learn
+pandas==2.2.3
+numpy==2.1.2
+scikit-learn==1.5.2
+matplotlib==3.9.2
+sqlalchemy==2.0.35
+imbalanced-learn==0.12.4
