--- a/datafest_datathon/dbt_data_baddies_datafest/models/data_tests.yml
+++ b/datafest_datathon/dbt_data_baddies_datafest/models/data_tests.yml
@@ -24,3 +24,9 @@ models:
           - relationships:
               to: ref('stg_students_courses')
               field: student_course_id
+  - name: waec_performance_metrics
+    columns:
+      - name: student_course_id
+        data_tests:
+          - unique
+          - not_null
