--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ tmpv8byy91_/
 tmpzt920w1c/
 **.env
 **/__pycache__/
-**/datafest_datathon.egg-info/*
+**/datafest_datathon.egg-info
 **/tmp3lkxoeof/*
 tmp*
 tmp*/
